# HelloWorldCLI

./: CMakeLists.txt  hello_test.cpp  lib.cpp  lib.hpp  main.cpp  version.hpp  version.hpp.in
.github/workflows/: blank.yml
